@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appletversion "2.8">
-  <!ENTITY manrevision "2.8">
-  <!ENTITY date "September 2004">
+  <!ENTITY appletversion "2.10">
+  <!ENTITY manrevision "2.10">
+  <!ENTITY date "March 2005">
   <!ENTITY applet "Sticky Notes">
 ]>
 
@@ -19,8 +19,12 @@ Template last modified Mar 12, 2002
 <!-- please do not change the id; for translations, change lang to appropriate code -->
     
     <articleinfo> 
-      <title>&applet; Applet Manual</title> 
+      <title>&applet; Manual</title> 
 
+      <copyright>
+        <year>2005</year>
+	<holder>Davyd Madeley</holder>
+      </copyright>
       <copyright>
         <year>2004</year>
         <holder>Shaun McCance</holder>
@@ -70,7 +74,12 @@ Template last modified Mar 12, 2002
             <firstname>Loban</firstname> 
             <surname>Rahman</surname> 
             <email>loban@earthling.net</email>
-          </author> 
+          </author>
+	  <author>
+	    <firstname>Davyd</firstname><surname>Madeley</surname>
+	    <email>davyd@madeley.id.au</email>
+	    <affiliation><orgname>GNOME Project</orgname></affiliation>
+	  </author>
 
 	    <!-- This is appropriate place for other contributors: translators, maintainers, etc. Commented out by default.
 	    <othercredit role="translator">
@@ -86,9 +95,16 @@ Template last modified Mar 12, 2002
 	</authorgroup>
 
 	<revhistory>
-	    <revision> 
-		<revnumber>Verion &manrevision;</revnumber> 
-		<date>&date;</date> 
+	    <revision>
+	      <revnumber>Version 2.10</revnumber>
+	      <date>March 2005</date>
+	      <revdescription>
+	       <para role="author">Davyd Madeley</para>
+	      </revdescription>
+	    </revision>
+	    <revision>
+		<revnumber>Version 2.8</revnumber> 
+		<date>September 2004</date> 
 		<revdescription> 
                     <para role="author">Angela Boyle</para>
                     <para role="publisher">GNOME Documentation Project</para>
@@ -133,7 +149,8 @@ Template last modified Mar 12, 2002
 	
 	<legalnotice> 
 	    <title>Feedback</title> 
-	    <para>To report a bug or make a suggestion regarding the <application>&applet;</application> applet or this manual, follow the directions in the <ulink url="ghelp:gnome-feedback" type="help">GNOME Feedback Page</ulink>. </para>
+	    <para>To report a bug or make a suggestion regarding the
+	    <application>&applet;</application> application or this manual, follow the directions in the <ulink url="ghelp:gnome-feedback" type="help">GNOME Feedback Page</ulink>. </para>
 	</legalnotice> 
     </articleinfo> 
     
@@ -144,20 +161,21 @@ Template last modified Mar 12, 2002
 <sect1 id="stickynotes-introduction">
   <title>Introduction</title>
   <figure id="stickynotes-fig">
-    <title>&applet; Applet</title>
+    <title>&applet;</title>
     <screenshot>
       <mediaobject>
         <imageobject>
           <imagedata fileref="figures/stickynotes_applet.png" format="PNG"/>
         </imageobject>
-        <textobject><phrase>Shows Sticky Notes applet</phrase></textobject>
+        <textobject><phrase>Shows Sticky Notes</phrase></textobject>
       </mediaobject>
     </screenshot>
   </figure>
 
-  <para>The <application>&applet;</application> applet enables you to create,
+  <para>The <application>&applet;</application> panel application enables you
+  to create,
   view, and manage sticky notes on your desktop. You can edit the title,
-  contents, dimensions, and style of sticky notes. When the applet is
+  contents, dimensions, and style of sticky notes. When the panel is
   restarted, for example when you log out and log in again, all sticky
   notes are saved and reopened in the same position with the same
   dimensions and style.</para>
@@ -172,24 +190,52 @@ Template last modified Mar 12, 2002
 <sect1 id="stickynotes-usage"> 
   <title>Using Sticky Notes</title>
 
+  <para>
+   Sticky notes in GNOME act as an overlay over the rest of the desktop. You can
+   layer them on top of each other, but they will always remain on top of all
+   other applications.
+  </para>
+
+  <sect2 id="stickynotes-show-hide">
+   <title>Showing and Hiding Sticky Notes</title>
+  <figure id="stickynotes-using-left-fig">
+    <title>Left Clicking on the Icon</title>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="figures/stickynote-left-menu.png" format="PNG"/>
+        </imageobject>
+        <textobject><phrase>Left Clicking on the Icon</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
+   <para>
+    You can show or hide all stickynotes on the desktop by clicking on the
+    sticky note icon and selecting <guilabel>Show Notes</guilabel>. This will
+    toggle the visibility of the notes on the desktop.
+   </para>
+  </sect2>
+
   <sect2 id="stickynotes-create-note">
     <title>Creating a Sticky Note</title>
-    <para>You can create a sticky note in the following ways:</para>
-    <itemizedlist>
-      <listitem><para>Choose <guimenuitem>New Note</guimenuitem> from
-      the applet right-click menu. </para></listitem>
-      <listitem><para>Right-click on the title of an existing note,
-      then choose <guimenuitem>New Note</guimenuitem> from the popup
-      menu.</para></listitem>
-      <listitem><para>Depending on your preference settings, you may
-      be able to create a new sticky note simply by clicking on the
-      <application>&applet;</application> applet.  For information on this
-      setting, see <xref linkend="stickynotes-behavior"/>.</para></listitem>
-    </itemizedlist>
+    <para>You can create a sticky note by clicking on the sticky note icon and
+    selecting <guilabel>New Note</guilabel>. Stickynotes will be moved into the
+    <guilabel>Show Notes</guilabel> state when you create a new note.</para>
   </sect2>
 
   <sect2 id="stickynotes-lock-notes">
     <title>Locking and Unlocking Sticky Notes</title>
+  <figure id="stickynotes-using-left-fig">
+    <title>Right Clicking on the Icon</title>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="figures/stickynote-right-menu.png" format="PNG"/>
+        </imageobject>
+        <textobject><phrase>Left Clicking on the Icon</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
     <para>You can lock or unlock all sticky notes at the same time, or you can
     lock or unlock individual sticky notes.  Locking a sticky note prevents you
     from accidentally changing the contents of the note.</para>
@@ -198,19 +244,17 @@ Template last modified Mar 12, 2002
         <term><phrase>To Lock or Unlock All Sticky Notes</phrase></term>
         <listitem>
           <para>To lock all sticky notes so that the notes cannot be edited,
-          choose <guimenuitem>Lock Notes</guimenuitem> from the applet
+          choose <guimenuitem>Lock Notes</guimenuitem> from the icon
           right-click menu so that there is a check mark next to it.  To
           unlock all sticky notes, choose <guimenuitem>Lock Notes</guimenuitem>
-          from the applet right-click menu again so that there is not a check
+          from the icon right-click menu again so that there is not a check
           mark next to it.</para>
-          <para>Note that all applets have the <guimenuitem>Lock</guimenuitem>
-          item in the right-click menu, which locks the position of the applet
+          <para>Note that all panel applications have the
+	  <guimenuitem>Lock to Panel</guimenuitem>
+          item in the right-click menu, which locks the position of the panel
+	  application
           on the panel.  Do not confuse this with the
           <guimenuitem>Lock Notes</guimenuitem> item.</para>
-          <para>Depending on your preference settings, you may be able
-          to lock and unlock all sticky notes simply by clicking on the
-          <application>&applet;</application> applet.  For information on this
-          setting, see <xref linkend="stickynotes-behavior"/>.</para>
         </listitem>
       </varlistentry>
       <varlistentry>
@@ -219,7 +263,10 @@ Template last modified Mar 12, 2002
         title of the note, then choose <guimenuitem>Lock Note</guimenuitem>
         from the popup menu.  To unlock an individual note, right-click on the
         title of the note, then choose <guimenuitem>Lock Note</guimenuitem>
-        from the popup menu again.</para></listitem>
+        from the popup menu again. You can also toggle the lock/unlock state of
+	a sticky note by clicking the lock button in the top left corner of the
+	sticky note.
+	</para></listitem>
       </varlistentry>
     </variablelist>
   </sect2>
@@ -232,41 +279,42 @@ Template last modified Mar 12, 2002
       <varlistentry>
         <term>To Delete All Sticky Notes</term>
         <listitem><para>To delete all sticky notes, choose <guimenuitem>Delete
-        Notes</guimenuitem> from the applet right-click menu.  A confirmation
-        dialog will appear; click on the <guibutton>Delete ALL</guibutton>
+        Notes</guimenuitem> from the icon right-click menu.  A confirmation
+        dialog will appear; click on the <guibutton>Delete All</guibutton>
         button to confirm the deletion.</para></listitem>
       </varlistentry>
       <varlistentry>
         <term>To Delete Individual Sticky Notes</term>
         <listitem><para>To delete an individual sticky note, right-click on the
         title of the note, then choose <guimenuitem>Delete Note</guimenuitem>
-        from the popup menu.</para></listitem>
+        from the popup menu. You can also delete a sticky note by clicking the
+	<guibutton>x</guibutton> in the top right corner.
+	</para></listitem>
       </varlistentry>
     </variablelist>
   </sect2>
 
-  <sect2 id="stickynotes-show-notes">
-    <title>Hiding and Showing Sticky Notes</title>
-    <para>You can hide all sticky notes so that they do not appear on your
-    desktop.  Sticky notes are not deleted when they are hidden.  To hide all
-    sticky notes, choose <guimenuitem>Show Notes</guimenuitem> from the applet
-    right-click menu so that there is not a check mark next to it.  To show all
-    sticky notes, choose <guimenuitem>Show Notes</guimenuitem> from the applet
-    right-click menu again so there is a check mark next to it.</para>
-    <para>Depending on your preference settings, you may be able
-    hide and show all sticky notes simply by clicking on the
-    <application>&applet;</application> applet.  For information on this
-    setting, see <xref linkend="stickynotes-behavior"/>.</para>
-  </sect2>
 </sect1>
 
 <sect1 id="stickynotes-advanced-settings"> 
   <title>Preferences</title>
+  
+  <figure id="stickynotes-prefs-fig">
+    <title>&applet; Preferences</title>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="figures/stickynotes-prefs.png" format="PNG"/>
+        </imageobject>
+        <textobject><phrase>Shows Sticky Notes preferences</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
 
   <sect2 id="stickynotes-size">
     <title>Adjusting Size</title> 
     <para>To configure the default size for all sticky notes, right-click on the
-    applet, then choose <guimenu>Preferences</guimenu> from the popup menu. The
+    sticky notes icon, then choose <guimenu>Preferences</guimenu> from the popup menu. The
     <application>Sticky Notes Preferences</application> dialog is displayed.</para>
     <variablelist> 
       <varlistentry> 
@@ -285,19 +333,35 @@ Template last modified Mar 12, 2002
   <sect2 id="stickynotes-color">
     <title>Changing Color and Font</title>
     <para>To configure the color and font for all sticky notes, right-click on
-    the applet, then choose <guimenu>Preferences</guimenu> from the popup menu.
+    the icon, then choose <guimenu>Preferences</guimenu> from the popup menu.
     The <application>Sticky Notes Preferences</application> dialog is
     displayed.</para>
-    <variablelist>  
+    <variablelist>
+      <varlistentry>
+        <term><guilabel>Font Color</guilabel></term>
+	<listitem>
+	 <para>
+	  Click on the color selector button to display the color selector
+	  dialog. On the color selector dialog, use the color wheel or spin
+	  boxes to choose the default font color for stickynotes.
+	 </para>
+	 <para>
+	  If you have selected, <guilabel>Use color from the system
+	  theme</guilabel>, then the current theme colors will be used and you
+	  will not be able to select new defaults.
+	 </para>
+	</listitem>
+      </varlistentry>
       <varlistentry> 
-        <term><guilabel>Color</guilabel></term> 
+        <term><guilabel>Note Color</guilabel></term> 
         <listitem>
           <para>Click on the color selector button to display the color
           selector dialog. On the color selector dialog, use the color wheel or
           spin boxes to choose the default base color for sticky notes.</para>
-          <para>Select <guilabel>Use color from the system theme</guilabel> to
-          use the current system theme to determine the default base color of
-          uncustomized sticky notes.</para>
+          <para>If you have selected, <guilabel>Use color from the system
+	  theme</guilabel>, then the current theme colors will be used and you
+	  will not able to select new defaults.
+	  </para>
         </listitem>
       </varlistentry>
       <varlistentry> 
@@ -306,24 +370,20 @@ Template last modified Mar 12, 2002
           <para>Click on the font selector button to display the font selector
           dialog. On the font selector dialog, use the list boxes to choose the
           default font for sticky notes.</para>
-          <para>Select <guilabel>Use font from the system theme</guilabel>
-          to use the current system theme to determine the default font of
-          uncustomized sticky notes.</para>
+	  <para>
+	   If you have selected, <guilabel>Use font from the system
+	   theme</guilabel>, then the current Application Font set in <!--
+	   FIXME: can I cross reference preferences? -->Font Preferences will be
+	   used and you will not be able to select new defaults.
+	  </para>
         </listitem>
-      </varlistentry>
-      <varlistentry> 
-        <term>Default Color and Font</term> 
-        <listitem><para>Under <guilabel>Behavior</guilabel>, select
-        <guilabel>Force default color and font on notes</guilabel> to
-        specify that all sticky notes, including customized notes, must
-        use the default style.</para></listitem>
       </varlistentry>
     </variablelist> 
   </sect2>
   <sect2 id="stickynotes-behavior">
     <title>Customizing Behavior</title>
     <para>To customize the behavior of <application>&applet;</application>,
-    right-click on the applet, then choose <guimenu>Preferences</guimenu>
+    right-click on the icon, then choose <guimenu>Preferences</guimenu>
     from the popup menu.  The <application>Sticky Notes Preferences</application>
     dialog is displayed.</para>
     <para>To specify that sticky notes are visible on all workspaces on the
@@ -331,38 +391,30 @@ Template last modified Mar 12, 2002
     <guilabel>Sticky Notes Preferences</guilabel> dialog.  If you are using
     multiple workspaces, this will cause all sticky notes to be visible on
     all workspaces.</para>
-    <para>To specify what happens when you click on the
-    <application>&applet;</application> applet, choose the appropriate
-    item in the list labeled <guilabel>Click</guilabel>.</para>
-    <variablelist>
-      <varlistentry>
-        <term><guilabel>Create a new note</guilabel></term>
-        <listitem><para>If you select this option, a new sticky note will be
-        created each time you click on the <application>&applet;</application>
-        applet.  For information on creating new sticky notes, see
-        <xref linkend="stickynotes-create-note"/>.</para></listitem>
-      </varlistentry>
-      <varlistentry>
-        <term><guilabel>Show/Hide all notes</guilabel></term>
-        <listitem><para>If you select this option, clicking on the
-        <application>&applet;</application> applet will toggle whether
-        all the sticky notes are hidden or shown.
-        For information on hiding and showing sticky notes, see
-        <xref linkend="stickynotes-show-notes"/>.</para></listitem>
-      </varlistentry>
-      <varlistentry>
-        <term><guilabel>Lock/Unlock all notes</guilabel></term>
-        <listitem><para>If you select this option, clicking on the
-        <application>&applet;</application> applet will toggle whether
-        all the sticky notes are locked or unlocked.
-        For information on locking sticky notes, see
-        <xref linkend="stickynotes-lock-notes"/>.</para></listitem>
-      </varlistentry>
-    </variablelist>
+
+    <para>
+     The option, <guilabel>Force default color and font on notes</guilabel>,
+     will force all sticky notes on your desktop to use the color and font
+     settings specified in the <guilabel>Default Note Properties</guilabel>
+     above (see <xref linkend="stickynotes-color"/>).
+    </para>
   </sect2>
 
-  <sect2 id="stickynotes-settings-individual"> 
+  </sect1>
+
+  <sect1 id="stickynotes-settings-individual"> 
     <title>Customizing Individual Notes</title>
+  <figure id="stickynotes-note-prefs-fig">
+    <title>Sticky Note Preferences</title>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="figures/stickynotes-note-prefs.png" format="PNG"/>
+        </imageobject>
+        <textobject><phrase>a Sticky Note's preferences</phrase></textobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
     <para>You can customize the look of each individual sticky note.  This
     can be useful for visually distinguishing different types of notes
     quickly.  To configure the settings for an individual sticky note,
@@ -376,23 +428,25 @@ Template last modified Mar 12, 2002
         note.</para></listitem>
       </varlistentry>
       <varlistentry> 
-        <term><guilabel>Color</guilabel></term> 
-        <listitem><para>Click on the color selector button to display the
-        color selector dialog. On the color selector dialog, use the color
-        wheel or spin boxes to choose the base color for this sticky
-        note.</para></listitem>
-      </varlistentry>
-      <varlistentry> 
         <term><guilabel>Use default color</guilabel></term> 
         <listitem><para>Select this option to use the default base color for
         this sticky note.  For information on setting the default base color,
         see <xref linkend="stickynotes-color"/>.</para></listitem>
       </varlistentry>
+      <varlistentry>
+       <term><guilabel>Font Color</guilabel></term>
+       <listitem>
+        <para>Click on the color selector button to display the color selector
+	dialog. On the color selector dialog, use the color wheel or spin boxes
+	to choose the font color for this sticky note.</para>
+       </listitem>
+      </varlistentry>
       <varlistentry> 
-        <term><guilabel>Font</guilabel></term> 
-        <listitem><para>Click on the font selector button to display the font
-        selector dialog.  On the font selector dialog, use the list boxes to
-        choose the font for this sticky note.</para></listitem>
+        <term><guilabel>Note Color</guilabel></term> 
+        <listitem><para>Click on the color selector button to display the
+        color selector dialog. On the color selector dialog, use the color
+        wheel or spin boxes to choose the base color for this sticky
+        note.</para></listitem>
       </varlistentry>
       <varlistentry> 
         <term><guilabel>Use default font</guilabel></term> 
@@ -400,7 +454,12 @@ Template last modified Mar 12, 2002
         sticky note.  For information on setting the default font, see
         <xref linkend="stickynotes-color"/>.</para></listitem>
       </varlistentry>
+      <varlistentry> 
+        <term><guilabel>Font</guilabel></term> 
+        <listitem><para>Click on the font selector button to display the font
+        selector dialog.  On the font selector dialog, use the list boxes to
+        choose the font for this sticky note.</para></listitem>
+      </varlistentry>
     </variablelist> 
-  </sect2>
 </sect1>
 </article> 
