@@ -1,3 +1,9 @@
+2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/C/figures/*.png: many new images
+
+	* docs/C/stickynotes_applet.xml: Update documentation for GNOME 2.10.
+
 2005-02-27  Ryan Lortie  <desrt@desrt.ca>
 
 	* stickynotes_applet_callbacks.c: Don't leak style while handling
